Fix header and map alignment

--- a/suomen-vaylat-app/src/components/layout/Content.scss
+++ b/suomen-vaylat-app/src/components/layout/Content.scss
@@ -5,6 +5,7 @@ div#menus {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    top: 4em;
 }
 
 button#dropdown-basic-button {
